slight spacing changes and fix inheritance of font-size

--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,29 @@
 * {
-    font-family: 'Rubik', sans-serif;
     box-sizing: border-box;
 }
 
 body {
+    font-family: 'Rubik', sans-serif;
     background: 
     linear-gradient(
         rgba(84, 181, 210, 0.79),
         rgba(84, 181, 210, 0)
     ) fixed,
-
-    url("https://source.unsplash.com/UMJUr3st0AE/2400x1586") no-repeat center center fixed;
- 
-    background-size: cover;
-    
+    url("https://source.unsplash.com/UMJUr3st0AE/2400x1586") no-repeat center center / cover fixed;
 }
 
 @media screen and (min-width: 600px) {
-    * {
-        font-size: 1.05em;
+    body {
+        font-size: 1.2em;
     }
 }
 
 header {
     margin: 1.5em 0;
-    padding: 0 2em;
+    padding: 0 1.5em;
     color: white;
     text-shadow: 0 0 .2em rgb(0, 0, 0,  .3);
+    text-align: center;
 }
 
 h1 {
@@ -34,7 +31,6 @@ h1 {
 }
 
 #title, #description {
-    text-align: center;
     margin:0;
 }
 
@@ -46,13 +42,16 @@ h1 {
 #survey-form {
     background: rgba(11, 99, 126, 0.8);
     color: white;
-    padding: 2em;
+    padding: 1.5em;
     margin: 0 auto;
     font-weight: 300;
+    max-width: 700px;
 }
 
-input {
-    font-weight: 300;
+@media screen and (min-width: 600px) {
+    #survey-form {
+        padding: 2em;
+    }
 }
 
 @media screen and (min-width: 700px) {
@@ -62,6 +61,16 @@ input {
     }
 }
 
+input {
+    font-weight: 300;
+}
+
+input:focus, #dropdown:focus, textarea:focus {
+    outline-color: rgba(0, 0, 255, 0.146);
+}
+
+
+
 input, select {
     padding: .5em;
 }
@@ -69,6 +78,7 @@ input, select {
 .radio-input, .checkbox-input {
     display: flex;
     align-items: center;
+    margin: .4em 0 .7em;
 }
 
 .radio-input input,
@@ -95,13 +105,8 @@ input, select {
 
 #dropdown {
     display: block;
-    margin-top: .3em;
     margin: .2em 0 1.2em;
     width: 100%;
-}
-
-.radio-input, .checkbox-input {
-    margin: .2em 0 .5em;
 }
 
 .checkbox-title {
@@ -111,11 +116,6 @@ input, select {
 
 .input-title {
     margin: 0;
-}
-
-.small {
-    font-size: .7em;
-    margin-left: .4em;
 }
 
 #submit {
@@ -135,9 +135,9 @@ textarea {
     margin: .2em 0 1.2em;
 }
 
+/* Utility Classes*/
 
-@media screen and (min-width: 600px) {
-    #survey-form {
-        max-width: 700px;
-    }
+.small {
+    font-size: .7em;
+    margin-left: .4em;
 }
